Fixed bug with using google font incorrect, slightly spacing changes

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -30,8 +30,9 @@ $title-color: #727272;
 
 .name {
     color: $name-color;
-    font-size: 5.3vw;
+    font-size: 5.5vw;
     font-weight: 500;
+    margin-bottom: 1vw;
 }
 
 .title {
@@ -54,7 +55,12 @@ $title-color: #727272;
     text-align: center;
     font-size: 1vw;
     background-color: #3F3F3F;
-    margin-top: 20px;
+    margin-top: 3vw;
     padding: 10px;
     border-radius: 5px;
+}
+
+.section2 {
+    width: 100%;
+    height: 100vh;
 }
