--- a/src/components/layout/Navbar.module.scss
+++ b/src/components/layout/Navbar.module.scss
@@ -4,7 +4,7 @@
     justify-content: space-between;
     height: 80px;
     width: 100%;
-    padding: 22px 35px;
+    padding: 22px 40px;
     z-index: 1;
 
     color: var(--header2-color);
@@ -23,7 +23,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 330px;
+    width: 360px;
 
     h3 {
         font-weight: 500;
